AKS-Backend/middleware-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: middleware-depl
  labels:
    app: middleware
spec:
  replicas: 1
  selector:
    matchLabels:
      app: middleware
  template:
    metadata:
      labels:
        app: middleware
    spec:
      containers:
      - name: middleware
        image: containerregistry7pm.azurecr.io/backend/webapp:#{buildNo}#
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "3Gi"
            cpu: "1"
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: acr-secret

---
apiVersion: v1
kind: Service
metadata:
  name: middleware
spec:
  selector:
    app: middleware
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
