AKS-Backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-support-path
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /middleware
        pathType: Prefix
        backend:
          service:
            name: middleware-service
            port:
              number: 8080
      - path: /listener
        pathType: Prefix
        backend:
          service:
            name: listener-service
            port:
              number: 8081
